test/classes/delete-free/error-shared-record.good
error-shared-record.chpl:4: error: cannot use type non-class type 'R' with memory management specifiers
